# FFmpegDemoWin

./: readme.txt
ffmpeg/include/libavcodec/: avcodec.h
ffmpeg/lib/: avcodec.lib  avformat.lib  avutil.lib
source/: CMakeLists.txt  ffmpegDemo.cpp  ffmpegDemo.h
video/: test.265
